# work-pulse

./: ARCHITECTURE.md  DEBUG.md  INSTALL.md  README.md  RELEASE_PLAN.md  index.html  package-lock.json  package.json  prompt.html  vite.config.ts
.github/workflows/: release.yml
scripts/: reinstall-mac.sh
src/: Dashboard.tsx  PromptWindow.tsx  api.ts  prompt-main.tsx  snooze.ts  styles.css  time.ts  types.ts  usePromptScheduler.ts  windows.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  prompt_scheduler.rs  prompt_window.rs
