[package]
name = "work_pulse"
version = "0.1.7"
description = "A local desktop timesheet prompt app."
authors = ["Work Pulse"]
edition = "2021"

[lib]
name = "work_pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-single-instance = "2"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
